# z-code

./: .env.sample  CONTRIBUTING.md  PLAN.md  PRIVACY.md  ROADMAP.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-ranking.js
.github/: pull_request_template.md
comparision/: Z_CODE_vs_ROO_vs_AIDER.md
legacy/: Implementing Aider's Repo Map in Rust.md  README.md  debug-rust.js  repo_map_output.json
legacy/rust_core/: Cargo.toml
legacy/rust_core/crates/architect/: Cargo.toml
legacy/rust_core/crates/architect/src/: lib.rs  pagerank.rs
legacy/rust_core/crates/architect/tests/: ranking_tests.rs
legacy/rust_core/crates/architect/tests/integration_repo_focus_temp/.roo/repo-map-cache/: db
legacy/rust_core/crates/architect/tests/integration_repo_focus_temp/src/: models.rs
legacy/rust_core/crates/architect/tests/integration_repo_focus_temp/web/: api.ts
legacy/rust_core/crates/architect/tests/integration_repo_focus_v2/.roo/repo-map-cache/: db
legacy/rust_core/crates/architect/tests/integration_repo_focus_v2/src/: main.rs
legacy/rust_core/crates/architect/tests/integration_repo_focus_v2/web/: app.ts
legacy/rust_core/queries/: cpp.scm  go.scm  java.scm  python.scm  rust.scm  typescript.scm
legacy/rust_core/src/: lib.rs  main.rs
legacy/rust_core/tests/integration_repo/.roo/repo-map-cache/: db  snap.00000000000017FF
legacy/rust_core/tests/integration_repo/src/: db.rs  main.rs  models.rs
legacy/rust_core/tests/integration_repo/web/: api.ts  app.ts
rust_core/: Cargo.toml  index.d.ts  index.js  package.json
rust_core/src/: lib.rs
(+481 files in other folders)
