[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# We'll add features = ["upe_multiverse", "superfluid"] as per ROADMAP later
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
napi = { version = "2.12", features = ["async"] }
napi-derive = "2.12"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.0"
