[workspace]
members = [
    ".",
    "crates/*",
]

[package]
name = "roost_napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
architect = { path = "crates/architect" }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
rayon = "1.8"
sled = "0.34"
napi = { version = "2.12", features = ["async", "serde-json"] }
napi-derive = "2.12"

[build-dependencies]
napi-build = "2.0"
