[package]
name = "architect"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
tiktoken-rs = "0.5"
